Made all parameters constant in CandidateValidator class
Implemented requested changes in StreamPractice